--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
+        <meta charset="UTF-8">
         <title>Marketplace Search</title>
 
         <link rel="stylesheet" href="./style.css">
@@ -13,33 +14,39 @@
         <div class="list">
             <div class="item">
                 <div class="icon">
-                    <img src="./images/ozon.png" alt="ozon">
+                    <a href="https://www.ozon.ru" target="_blank">
+                        <img src="./images/ozon.png" alt="ozon">
+                    </a>
                 </div>
 
                 <div class="form">
-                    <input type="text" class="input search-input" data-marketplace="ozon">
+                    <input type="text" class="input search-input" data-marketplace="ozon" placeholder="Поисковый запрос">
                     <button class="button submit-button" href="https://www.ozon.ru" data-marketplace="ozon">GO!</button>
                 </div>
             </div>
             
             <div class="item">
                 <div class="icon">
-                    <img src="./images/wb.png" alt="wb">
+                    <a href="https://www.wildberries.ru" target="_blank">
+                        <img src="./images/wb.png" alt="wb">
+                    </a>
                 </div>
 
                 <div class="form">
-                    <input type="text" class="input search-input" data-marketplace="wb">
+                    <input type="text" class="input search-input" data-marketplace="wb" placeholder="Поисковый запрос">
                     <button class="button submit-button" href="https://www.wildberries.ru" data-marketplace="wb">GO!</button>
                 </div>
             </div>
 
             <div class="item">
                 <div class="icon">
-                    <img src="./images/ym.png" alt="ym">
+                    <a href="https://market.yandex.ru" target="_blank">
+                        <img src="./images/ym.png" alt="ym">
+                    </a>
                 </div>
 
                 <div class="form">
-                    <input type="text" class="input search-input" data-marketplace="ym">
+                    <input type="text" class="input search-input" data-marketplace="ym" placeholder="Поисковый запрос">
                     <button class="button submit-button" href="https://market.yandex.ru" data-marketplace="ym">GO!</button>
                 </div>
             </div>
