--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@
 
         <h1>Поиск по маркетплейсам</h1>
 
+        <button class="button" id="button-clear">Очистить</button>
+
         <div class="list">
             <div class="item">
                 <div class="icon">
@@ -26,7 +28,7 @@
                     data-market="ozon">
 
                     <input type="text" class="input search-input" data-marketplace="ozon" placeholder="Поисковый запрос">
-                    <button type="submit" class="button submit-button">GO!</button>
+                    <button type="submit" class="button circle submit-button">GO!</button>
                 </form>
             </div>
             
@@ -44,7 +46,7 @@
                     data-market="wb">
 
                     <input type="text" class="input search-input" placeholder="Поисковый запрос">
-                    <button type="submit" class="button submit-button">GO!</button>
+                    <button type="submit" class="button circle submit-button">GO!</button>
                 </form>
             </div>
 
@@ -62,7 +64,7 @@
                     data-market="ym">
 
                     <input type="text" class="input search-input" placeholder="Поисковый запрос">
-                    <button type="submit" class="button submit-button">GO!</button>
+                    <button type="submit" class="button circle submit-button">GO!</button>
                 </form>
             </div>
 
@@ -80,7 +82,7 @@
                     data-market="megamarket">
 
                     <input type="text" class="input search-input" id="allsearch" placeholder="Поисковый запрос">
-                    <button type="submit" class="button submit-button">GO!</button>
+                    <button type="submit" class="button circle submit-button">GO!</button>
                 </form>
             </div>
         </div>
